<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_workout"
            android:icon="@drawable/bata"
            android:title="@string/Bata"/>
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/adidas"
            android:title="@string/Adidas"/>
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/puma"
            android:title="@string/Puma"/>
        <item
            android:id="@+id/nav_workouts"
            android:icon="@drawable/nike"
            android:title="@string/Nike"/>

    </group>
    <item android:title="@string/Email">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/logout"
                android:title="@string/Sign_Out"/>
        </menu>
    </item>

</menu>